src/components/Header/Header.css
.header {
  /* display: block; */
  width: 100%;
  /* height: auto; */
  text-align: center;
  margin: 0;
  padding: 0;
  /* padding-right: 10px; */
  /* margin-right: 10px; */
}

.job {
  /* color: #00ffa7; */
  /* color: rgb(30, 34, 39); */
  padding:5px;
  border-radius: 4px;
  background-color: #00ffa7;
  color: rgb(30, 34, 39);
}

.site-title {
  padding-top:10px;
  color: white;
}



h1 {
  font-size: 2rem;
  width: 100%;
}

hr {
  width: 80%;
}

.spacer {
  margin: 10px;
}

@media only screen and (min-width: 1000px) {
  h1 {
    font-size: 3rem;
  }

  hr {
    width: 75%;
  }

}

